@@ -581,6 +581,21 @@ require_once('include/page_header.php');
 					throw new Exception();
 				}
 
+				// clone discovery rules
+				$discoveryRules = API::DiscoveryRule()->get(array(
+					'hostids' => $clone_hostid,
+					'inherited' => false,
+				));
+				if ($discoveryRules) {
+					$copyDiscoveryRules = API::DiscoveryRule()->copy(array(
+						'discoveryids' => zbx_objectValues($discoveryRules, 'itemid'),
+						'hostids' => array($hostid)
+					));
+					if (!$copyDiscoveryRules) {
+						throw new Exception();
+					}
+				}
+
 				$options = array(
 					'hostids' => $clone_hostid,
 					'selectItems' => API_OUTPUT_EXTEND,
